--- a/UI/css/reg.css
+++ b/UI/css/reg.css
@@ -1,7 +1,7 @@
  body, html{
     height: 100%;
     background-repeat: no-repeat;
-    background-color: #d3d3d3;
+    background-color: #fff;
     font-family: 'Playfair Display', serif;
 }
 
